<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity2Tela5">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topo1"
        android:layout_width="426dp"
        android:layout_height="59dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="750dp"
        android:background="#370909"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtpedido"
        android:layout_width="316dp"
        android:layout_height="106dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="550dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtpedido"
        android:textColor="#370909"
        android:textColorHighlight="#370909"
        android:textColorLink="#370909"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topo1" />


    <CheckBox
        android:id="@+id/cbcachorroquente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cbcahorroquente"
        android:textColor="#370909"
        android:textColorLink="#370909"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/cbrefri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpedido" />


    <CheckBox
        android:id="@+id/cbrefri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cbrefri"
        android:textColor="#370909"
        android:textColorLink="#370909"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/cbsobre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbcachorroquente" />


    <CheckBox
        android:id="@+id/cbsobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="370dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cbsobre"
        android:textColor="#370909"
        android:textColorLink="#370909"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbrefri" />


    <EditText
        android:id="@+id/qtd2"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="473dp"
        android:ems="10"
        android:hint="@string/qtd2"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbrefri"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/qtd3"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="374dp"
        android:ems="10"
        android:hint="@string/qtd3"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbsobre"
        app:layout_constraintTop_toBottomOf="@+id/qtd2"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/btnfinalizar"
        android:layout_width="240dp"
        android:layout_height="68dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="236dp"
        android:backgroundTint="#370909"
        android:text="@string/btnfinalizar"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbsobre" />


    <TextView
        android:id="@+id/txtvalor"
        android:layout_width="210dp"
        android:layout_height="59dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="122dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtvalor"
        android:textColor="#370909"
        android:textColorHighlight="#370909"
        android:textColorHint="#370909"
        android:textColorLink="#370909"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfinalizar" />


    <Button
        android:id="@+id/btnvoltar"
        android:layout_width="139dp"
        android:layout_height="59dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#370909"
        android:text="@string/btnvoltar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfinalizar" />


    <EditText
        android:id="@+id/qtd1"
        android:layout_width="102dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-230dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/qtd1"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/qtd2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cbcachorroquente"
        app:layout_constraintTop_toBottomOf="@+id/txtpedido"
        app:layout_constraintVertical_bias="0.977" />

</androidx.constraintlayout.widget.ConstraintLayout>